[tool.poetry]
name = "vscode-runway"
version = "0.2.0-beta.0"
description = "Visual Studio Code extension for Runway"
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"
packages = [{ include = "vscode_runway.py" }]

[tool.poetry.dependencies]
python = "^3.8"

click = "^7.1.2"
runway = { git = "https://github.com/ITProKyle/runway.git", branch = "feature/pydantic-config" }
semver = "^2.10.2"
# runway = { git = "https://github.com/onicagroup/runway.git", branch = "v2" }  # TODO use this once above it merged

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
pylint = "^2.6.0"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.11.1"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vscode-runway = "vscode_runway:main"


[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.demo
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py38']


[tool.isort]
profile = "black"
skip = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".venv",
    "_build",
    "build",
    "dist",
    "node_modules",
]


[tool.pylint.message_control]
# http://pylint.pycqa.org/en/latest/technical_reference/features.html#messages-control-options
disable = [
    "line-too-long",  # flake8 overlap
    "missing-class-docstring",  # flake8 (pydocstyle) overlap
    "missing-function-docstring",  # flake8 (pydocstyle) overlap
    "missing-module-docstring",  # flake8 (pydocstyle) overlap
    "similarities",  # black overcomplicates this
    # TODO fix these - python 3 only code
    "raise-missing-from",
]
